syntax = "proto3";

package recoverUser;

service RecoverUserService {
  rpc RecoverUser(RecoverUserRequest) returns (RecoverUserResponse);
  rpc RecoverUserByMnemonic(RecoverUserByMnemonicRequest) returns (RecoverUserByMnemonicResponse);
}

message RecoverUserRequest {
  string email = 1;
  string phoneNumber = 2;
  string password = 3;
}

message RecoverUserResponse {
  string email = 1;
  bool emailVerified = 2;
  string phoneNumber = 3;
  bool phoneNumberVerified = 4;
  repeated Wallet wallet = 5;
}


message RecoverUserByMnemonicRequest {
  string email = 1;
  string mnemonic = 2;
}

message RecoverUserByMnemonicResponse {
  bool success = 1;
  string message = 2;
  string email = 3;
  bool emailVerified = 4;
  string phoneNumber = 5;
  bool phoneNumberVerified = 6;
  repeated Wallet wallet = 7;
  bool newUser = 8;
  string error = 9;
}

message Wallet {
  int32 accountCount = 1;
  string accountName = 2;
  string ethereumAddress = 3;
  string publickey = 4;
  Share sharepart = 5;
  double TwoPercent = 6;
  double RestValue = 7;
  double PerMonth = 8;
  double Cifd = 9;
  string uniqueId = 10;
  bool ifUniqueId = 11;
}

message Share {
  string x = 1;
  string y = 2;
}

